Fix alignment on body wrapper

--- a/Foundations/flex_box/practice_sets/07-flex-layout-2/style.css
+++ b/Foundations/flex_box/practice_sets/07-flex-layout-2/style.css
@@ -29,6 +29,7 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
 }
 
 .card {
@@ -39,6 +40,7 @@ body {
 
 .body-wrap {
   display: flex;
+  flex-grow: 1;
 }
 
 .card-wrap {
